--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2021"
 [dependencies]
 base64 = "0.21.5"
 clap = { version = "4.4.11", features = ["derive"] }
+good_lp = { version = "1.7.0", features = ["minilp"], default_features = false }
 openssl = "0.10.61"
 rand = "0.8.5"
 reqwest = { version = "0.11.22", features = ["json", "blocking"] }
 rpassword = "7.3.1"
-serde = {version = "1.0.193", features = ["derive"]}
+serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 serde_yaml = "0.9.27"
 telnet = "0.2.1"
