--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ telnet = "0.2.1"
 thiserror = "1.0.50"
 tokio = { version = "1.35.0", features = ["rt", "macros"] }
 tokio-native-tls = "0.3.1"
+strum = { version = "0.26", features = ["derive"] }
+strum_macros = "0.26"
