--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde_json = "1.0.108"
 serde_yaml = "0.9.27"
 telnet = "0.2.1"
 thiserror = "1.0.50"
-tokio = { version = "1.35.0", features = ["rt", "macros"] }
+tokio = { version = "1.35.0", features = ["rt", "macros", "rt-multi-thread"] }
 tokio-native-tls = "0.3.1"
 strum = { version = "0.26", features = ["derive"] }
 strum_macros = "0.26"
